# gnome-todo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.bayhan.GnomeTodo.json  install-extension.sh  install-flatpak.sh  install.sh  meson.build  run-flatpak.sh
data/: dev.bayhan.GnomeTodo.desktop  dev.bayhan.GnomeTodo.metainfo.xml  meson.build
extensions/gnome-todo-shell-ext@dev.bayhan/: README.md  extension.js  metadata.json  stylesheet.css
src/: dev.bayhan.GnomeTodo.gresource.xml  meson.build  style.css  todogui-panel.in  todogui.in
src/todotxt_gui/: __init__.py  _config.py  _content.py  _content_header.py  _core.py  _detail_panel.py  _detail_panel_tags.py  _dialogs.py  _file_monitor.py  _grouping.py  _preferences.py  _shortcuts.py  _sidebar.py  _sidebar_state.py  _task_row.py  _task_row_state.py  _ui.py  _welcome.py  _widgets.py  _window.py  _window_state.py  app.py  panel_cli.py
src/todotxt_lib/: __init__.py  env.py  filtering.py  grouping.py  mutations.py  operations.py  parser.py  task.py  text_editing.py  todo_directory.py  todo_file.py
src/ui/: add_task_dialog.blp  content_header.blp  preferences_dialog.blp  smart_filter_row.blp  task_detail_panel.blp  task_row.blp  welcome_dialog.blp  window.blp
tests/gui/: test_app.py  test_panel_cli.py  test_sidebar_state.py  test_task_row_state.py  test_window_state.py
tests/lib/: test_filtering.py  test_grouping.py  test_mutations.py  test_operations.py  test_parser.py  test_task.py  test_text_editing.py  test_todo_file.py
