install_data(
  'dev.bayhan.GnomeTodo.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(
  'dev.bayhan.GnomeTodo.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo'),
)

install_data(
  'dev.bayhan.GnomeTodo.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
)
